add nav section

--- a/index.html
+++ b/index.html
@@ -1,93 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <title>Discord</title>
     <link rel="stylesheet" href="./assets/style.css">
-  </head>
-  <body class="debug">
+</head>
 
-    <header id="site_header">
-      <nav>
-        <div class="container d-flex">
-          <div class="logo"></div>
-          <div class="menu"></div>
-          <div class="login"></div>
-        </div>
-      </nav>
-      <div class="container-sm">
-
-      </div>
-
-    </header>
-    <!-- /#site_header -->
-    <main id="site_main">
-      <section class="invite_only">
+<body class="">
+    <header>
+        <!-- griglia navigazione -->
         <div class="container">
-          <div class="row">
-            <div class="col-9"></div>
-            <div class="col-3"></div>
-          </div>
-        </div>
-      </section>
-      <!-- /.invite_only -->
-      <section class="easy_find bg_secondary">
-        <div class="container">
-          <div class="row">
-            <div class="col-3"></div>
-            <div class="col-9"></div> 
-          </div>
-        </div>
-      </section>
-      <!-- /.easy_find -->
-      <section class="fandom">
-        <div class="container">
-          <div class="row">
-            <div class="col-9"></div>
-            <div class="col-3"></div>
-          </div>
-        </div>
-      </section>
-      <!-- /.fandom -->
-      <section class="keep_in_touch bg_secondary">
-        <div class="container">
-          <div class="contents">
-             
-          </div>
-        </div>
-      </section>
-      <!-- /.keep_in_touch -->
-
-    </main>
-    <!-- /#site_main -->
-    <footer id="site_footer">
-      <div class="container">
-        <div class="footer_top row py_2">
-          <div class="col-3"></div>
-          <div class="col-9">
-            <div class="row">
-              <div class="col-3">
-              </div>
-              <div class="col-3"></div>
-              <div class="col-3"></div>
-              <div class="col-3"></div>
+            <div class="row_header">
+                <div class="col_1">
+                    <img src="./img/logo.svg" alt="logo_Discord">
+                </div>
+                <div class="col_6">
+                    <a href="">Scarica</a>
+                    <a href="">Perchè Discord</a>
+                    <a href="">Nitro</a>
+                    <a href="">Sicurezza</a>
+                    <a href="">Assistenza</a>
+                </div>
+                <div class="col_1">
+                    <button>Accedi</button>
+                </div>
             </div>
-          </div>
         </div>
-        <hr>
-        <!-- /.footer_top -->
-        <div class="footer_bottom d-flex space-between">
-          <div class="logo">Logo</div>
-          <div class="register">Register</div>
-        </div>
-        <!-- /.footer_bottom -->
-      </div>
+    </header>
 
+    <main>
+        <!-- inizio sezioni -->
+        <div class="jumbo">
+            <div class="container jumbo_txt">
+                <span>Il tuo posto per parlare</span>
+                <p id="jumbo_main">Lorem ipsum dolor sit amet.</p>
+            </div>
+        </div>
+        <!-- colonna uno -->
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col_6">
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo repellat voluptate quos.
+                            Voluptatem quod earum quam quia ipsam amet repellendus ad maxime. Vero id labore dicta porro
+                            fugit. Aliquam, molestias.</p>
+                    </div>
+                    <div class="col_6">
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo repellat voluptate quos.
+                            Voluptatem quod earum quam quia ipsam amet repellendus ad maxime. Vero id labore dicta porro
+                            fugit. Aliquam, molestias.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- colonna due -->
+        <section class="grey">
+            <div class="container">
+                <div class="row">
+                    <div class="col_6">
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo repellat voluptate quos.
+                            Voluptatem quod earum quam quia ipsam amet repellendus ad maxime. Vero id labore dicta porro
+                            fugit. Aliquam, molestias.</p>
+                    </div>
+                    <div class="col_6">
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo repellat voluptate quos.
+                            Voluptatem quod earum quam quia ipsam amet repellendus ad maxime. Vero id labore dicta porro
+                            fugit. Aliquam, molestias.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- colonna tre -->
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col_6">
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo repellat voluptate quos.
+                            Voluptatem quod earum quam quia ipsam amet repellendus ad maxime. Vero id labore dicta porro
+                            fugit. Aliquam, molestias.</p>
+                    </div>
+                    <div class="col_6">
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo repellat voluptate quos.
+                            Voluptatem quod earum quam quia ipsam amet repellendus ad maxime. Vero id labore dicta porro
+                            fugit. Aliquam, molestias.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- fine colonne -->
+        <section>
+            <div class="foot_grey">
+                <div class="green"></div>
+            </div>
+        </section>
+        <section class="black">
+            <div class="container">
+                <div class="row">
+                    <div class="col_5">
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo repellat voluptate quos.
+                            Voluptatem quod earum quam quia ipsam amet repellendus ad maxime. Vero id labore dicta porro
+                            fugit. Aliquam, molestias.</p>
+                    </div>
+                    <div class="col_2">
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo repellat voluptate quos.
+                            Voluptatem quod earum quam quia ipsam amet repellendus ad maxime. Vero id labore dicta porro
+                            fugit. Aliquam, molestias.</p>
+                    </div>
+                    <div class="col_2">
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo repellat voluptate quos.
+                            Voluptatem quod earum quam quia ipsam amet repellendus ad maxime. Vero id labore dicta porro
+                            fugit. Aliquam, molestias.</p>
+                    </div>
+                    <div class="col_2">
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo repellat voluptate quos.
+                            Voluptatem quod earum quam quia ipsam amet repellendus ad maxime. Vero id labore dicta porro
+                            fugit. Aliquam, molestias.</p>
+                    </div>
+                    <div class="col_2">
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo repellat voluptate quos.
+                            Voluptatem quod earum quam quia ipsam amet repellendus ad maxime. Vero id labore dicta porro
+                            fugit. Aliquam, molestias.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="black">
+        <div class="container aqua">
+            <div class="row_footer">
+                <div class="col_1 logo">Logo</div>
+                <div class="col_1 bottone"><button>Bottone</button></div>
+            </div>
+        </div>
     </footer>
-    <!-- /#site_footer -->
+</body>
 
-
-  </body>
 </html>
