--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <!-- inizio sezioni -->
         <div class="jumbo">
             <div class="container jumbo_txt">
-                <span>Il tuo posto per parlare</span>
-                <p id="jumbo_main">Lorem ipsum dolor sit amet.</p>
+                <h1>Il tuo posto per parlare</h1>
+                <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo si amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
             </div>
         </div>
         <!-- colonna uno -->
