add jumbo buttons

--- a/index.html
+++ b/index.html
@@ -41,7 +41,12 @@
                 <h1>Il tuo posto per parlare</h1>
                 <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo si amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
             </div>
+            <div class="container jumbo_button">
+                <button>&darr; Scarica per Mac</button>
+                <button>Apri Discord nel tuo Browser</button>
+            </div>
         </div>
+        
         <!-- colonna uno -->
         <section>
             <div class="container">
