--- a/index.html
+++ b/index.html
@@ -46,20 +46,17 @@
                 <button>Apri Discord nel tuo Browser</button>
             </div>
         </div>
-        
+
         <!-- colonna uno -->
         <section>
             <div class="container">
                 <div class="row">
-                    <div class="col_6">
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo repellat voluptate quos.
-                            Voluptatem quod earum quam quia ipsam amet repellendus ad maxime. Vero id labore dicta porro
-                            fugit. Aliquam, molestias.</p>
+                    <div class="col_9">
+                        <img src="./img/item1.svg" alt="">
                     </div>
-                    <div class="col_6">
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo repellat voluptate quos.
-                            Voluptatem quod earum quam quia ipsam amet repellendus ad maxime. Vero id labore dicta porro
-                            fugit. Aliquam, molestias.</p>
+                    <div class="col_3">
+                        <h1>Un luogo a invito con tutto lo spazio necessario per parlare</h1>
+                        <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo</p>
                     </div>
                 </div>
             </div>
@@ -68,12 +65,12 @@
         <section class="grey">
             <div class="container">
                 <div class="row">
-                    <div class="col_6">
+                    <div class="col_3">
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo repellat voluptate quos.
                             Voluptatem quod earum quam quia ipsam amet repellendus ad maxime. Vero id labore dicta porro
                             fugit. Aliquam, molestias.</p>
                     </div>
-                    <div class="col_6">
+                    <div class="col_9">
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo repellat voluptate quos.
                             Voluptatem quod earum quam quia ipsam amet repellendus ad maxime. Vero id labore dicta porro
                             fugit. Aliquam, molestias.</p>
@@ -85,12 +82,12 @@
         <section>
             <div class="container">
                 <div class="row">
-                    <div class="col_6">
+                    <div class="col_9">
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo repellat voluptate quos.
                             Voluptatem quod earum quam quia ipsam amet repellendus ad maxime. Vero id labore dicta porro
                             fugit. Aliquam, molestias.</p>
                     </div>
-                    <div class="col_6">
+                    <div class="col_3">
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo repellat voluptate quos.
                             Voluptatem quod earum quam quia ipsam amet repellendus ad maxime. Vero id labore dicta porro
                             fugit. Aliquam, molestias.</p>
