add image and text second section

--- a/index.html
+++ b/index.html
@@ -56,24 +56,22 @@
                     </div>
                     <div class="col_3">
                         <h1>Un luogo a invito con tutto lo spazio necessario per parlare</h1>
-                        <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo</p>
+                        <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
                     </div>
                 </div>
             </div>
         </section>
+        
         <!-- colonna due -->
         <section class="grey">
             <div class="container">
                 <div class="row">
                     <div class="col_3">
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo repellat voluptate quos.
-                            Voluptatem quod earum quam quia ipsam amet repellendus ad maxime. Vero id labore dicta porro
-                            fugit. Aliquam, molestias.</p>
+                        <h1>Dove trovarsi è facile</h1>
+                        <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei li e unirsi instantaneamente senza dover chiamare.</p>
                     </div>
                     <div class="col_9">
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo repellat voluptate quos.
-                            Voluptatem quod earum quam quia ipsam amet repellendus ad maxime. Vero id labore dicta porro
-                            fugit. Aliquam, molestias.</p>
+                        <img src="./img/item2.svg" alt="">
                     </div>
                 </div>
             </div>
