add padding to sections

--- a/index.html
+++ b/index.html
@@ -76,19 +76,17 @@
                 </div>
             </div>
         </section>
+
         <!-- colonna tre -->
         <section>
             <div class="container">
                 <div class="row">
                     <div class="col_9">
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo repellat voluptate quos.
-                            Voluptatem quod earum quam quia ipsam amet repellendus ad maxime. Vero id labore dicta porro
-                            fugit. Aliquam, molestias.</p>
+                        <img src="./img/item3.svg" alt="">
                     </div>
                     <div class="col_3">
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo repellat voluptate quos.
-                            Voluptatem quod earum quam quia ipsam amet repellendus ad maxime. Vero id labore dicta porro
-                            fugit. Aliquam, molestias.</p>
+                        <h1>Da pochi a un fandom</h1>
+                        <p>Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.</p>
                     </div>
                 </div>
             </div>
