--- a/index.html
+++ b/index.html
@@ -92,9 +92,12 @@
             </div>
         </section>
         <!-- fine colonne -->
-        <section>
-            <div class="foot_grey">
-                <div class="green"></div>
+
+        <section id="keep_in_touch">
+            <div class="container">
+                <h1>Tecnologia affidabile per tenersi in contatto</h1>
+                <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+                <img src="./img/item4-big.svg" alt="">
             </div>
         </section>
         <section class="black">
