add keep in touch button

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col_9">
-                        <img src="./img/item1.svg" alt="">
+                        <img src="./img/item1.svg" alt="Discord_server">
                     </div>
                     <div class="col_3">
                         <h1>Un luogo a invito con tutto lo spazio necessario per parlare</h1>
@@ -63,7 +63,7 @@
         </section>
         
         <!-- colonna due -->
-        <section class="grey">
+        <section id="grey_sec">
             <div class="container">
                 <div class="row">
                     <div class="col_3">
@@ -71,7 +71,7 @@
                         <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei li e unirsi instantaneamente senza dover chiamare.</p>
                     </div>
                     <div class="col_9">
-                        <img src="./img/item2.svg" alt="">
+                        <img src="./img/item2.svg" alt="voice_chat_Discord">
                     </div>
                 </div>
             </div>
@@ -82,7 +82,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col_9">
-                        <img src="./img/item3.svg" alt="">
+                        <img src="./img/item3.svg" alt="Discord_group">
                     </div>
                     <div class="col_3">
                         <h1>Da pochi a un fandom</h1>
@@ -93,13 +93,20 @@
         </section>
         <!-- fine colonne -->
 
+        <!-- ultima sezione -->
         <section id="keep_in_touch">
             <div class="container">
                 <h1>Tecnologia affidabile per tenersi in contatto</h1>
                 <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
-                <img src="./img/item4-big.svg" alt="">
+                <img src="./img/item4-big.svg" alt="Discord_videocall">
+                <div class="kit_foot"> 
+                    <img src="./img/stars.svg" alt="">    <!-- kit => id="keep_in_touch" -->
+                    <h1>Pronto a iniziare la tua avventura?</h1>
+                </div>
+                <button id="mac_2">&darr; Scarica per mac</button>
             </div>
         </section>
+
         <section class="black">
             <div class="container">
                 <div class="row">
