--- a/index.html
+++ b/index.html
@@ -102,38 +102,33 @@
                 <div class="kit_foot"> 
                     <img src="./img/stars.svg" alt="">    <!-- kit => id="keep_in_touch" -->
                     <h1>Pronto a iniziare la tua avventura?</h1>
+                    <button id="mac_2">&darr; Scarica per mac</button>
                 </div>
-                <button id="mac_2">&darr; Scarica per mac</button>
             </div>
         </section>
 
-        <section class="black">
+        <section class="info_section">
             <div class="container">
                 <div class="row">
-                    <div class="col_5">
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo repellat voluptate quos.
-                            Voluptatem quod earum quam quia ipsam amet repellendus ad maxime. Vero id labore dicta porro
-                            fugit. Aliquam, molestias.</p>
-                    </div>
                     <div class="col_2">
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo repellat voluptate quos.
-                            Voluptatem quod earum quam quia ipsam amet repellendus ad maxime. Vero id labore dicta porro
-                            fugit. Aliquam, molestias.</p>
+                        <h3>Il tuo posto per parlare</h3>
+                        <img class="flag" src="./img/ita.png" alt="">
+                        <span>Italiano</span>
                     </div>
-                    <div class="col_2">
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo repellat voluptate quos.
-                            Voluptatem quod earum quam quia ipsam amet repellendus ad maxime. Vero id labore dicta porro
-                            fugit. Aliquam, molestias.</p>
-                    </div>
-                    <div class="col_2">
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo repellat voluptate quos.
-                            Voluptatem quod earum quam quia ipsam amet repellendus ad maxime. Vero id labore dicta porro
-                            fugit. Aliquam, molestias.</p>
-                    </div>
-                    <div class="col_2">
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo repellat voluptate quos.
-                            Voluptatem quod earum quam quia ipsam amet repellendus ad maxime. Vero id labore dicta porro
-                            fugit. Aliquam, molestias.</p>
+                    <div class="col_9">
+                        <h4>Prodotto</h4>
+                      
+                        <div class="row">
+                            <div class="col_3">
+                                <h4></h4>
+                            </div>
+                            <div class="col_3">
+                                <h4>Compagnia</h4>
+                            </div>
+                            <div class="col_3">
+
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
