fixed nav link layout

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="col_1">
                     <img src="./img/logo.svg" alt="logo_Discord">
                 </div>
-                <div class="col_6">
+                <div class="col_6 link_nav">
                     <a href="">Scarica</a>
                     <a href="">Perchè Discord</a>
                     <a href="">Nitro</a>
