fixed column last section

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
                 <img src="./img/item4-big.svg" alt="Discord_videocall">
                 <div class="kit_foot"> 
-                    <img src="./img/stars.svg" alt="">    <!-- kit => id="keep_in_touch" -->
+                    <img src="./img/stars.svg" alt="stars">    <!-- kit => id="keep_in_touch" -->
                     <h1>Pronto a iniziare la tua avventura?</h1>
                     <button id="mac_2">&darr; Scarica per mac</button>
                 </div>
@@ -110,24 +110,54 @@
         <section class="info_section">
             <div class="container">
                 <div class="row">
-                    <div class="col_2">
-                        <h3>Il tuo posto per parlare</h3>
+                    <div class="col_9">
+                        <h2 class="info_title">Il tuo posto per parlare</h2>
                         <img class="flag" src="./img/ita.png" alt="">
-                        <span>Italiano</span>
+                        <span>Italiano &or;</span>
                     </div>
                     <div class="col_9">
-                        <h4>Prodotto</h4>
-                      
-                        <div class="row">
-                            <div class="col_3">
-                                <h4></h4>
-                            </div>
-                            <div class="col_3">
-                                <h4>Compagnia</h4>
-                            </div>
-                            <div class="col_3">
-
-                            </div>
+                        <h4 class="info_title">Prodotto</h4>
+                        <div class="row_prefooter">
+                            <div class="col_10"><p class="info_content">Scarica</p></div>
+                            <div class="col_10"><p class="info_content">Perchè Discord</p></div>
+                            <div class="col_10"><p class="info_content">Nitro</p></div>
+                            <div class="col_10"><p class="info_content">Sicurezza</p></div>
+                            <div class="col_10"><p class="info_content">Assistenza</p></div>
+                        </div>
+                    </div>
+                    <div class="col_9">
+                        <h4 class="info_title">Compagnia</h4>
+                        <div class="row_prefooter">
+                            <div class="col_10"><p class="info_content">Chi siamo</p></div>
+                            <div class="col_10"><p class="info_content">Lavora con noi</p></div>
+                            <div class="col_10"><p class="info_content">Marchio</p></div>
+                            <div class="col_10"><p class="info_content">Redazione</p></div>
+                            <div class="col_10"><p class="info_content">Negozio</p></div>
+                        </div>
+                    </div>
+                    <div class="col_9">
+                        <h4 class="info_title">Risorse</h4>
+                        <div class="row_prefooter">
+                            <div class="col_10"><p class="info_content">Scarica</p></div>
+                            <div class="col_10"><p class="info_content">Perchè Discord</p></div>
+                            <div class="col_10"><p class="info_content">Nitro</p></div>
+                            <div class="col_10"><p class="info_content">Sicurezza</p></div>
+                            <div class="col_10"><p class="info_content">Assistenza</p></div>
+                            <div class="col_10"><p class="info_content">Scarica</p></div>
+                            <div class="col_10"><p class="info_content">Perchè Discord</p></div>
+                            <div class="col_10"><p class="info_content">Nitro</p></div>
+                            <div class="col_10"><p class="info_content">Sicurezza</p></div>
+                            <div class="col_10"><p class="info_content">Assistenza</p></div>
+                        </div>
+                    </div>
+                    <div class="col_9">
+                        <h4 class="info_title">Norme</h4>
+                        <div class="row_prefooter">
+                            <div class="col_10"><p class="info_content">Scarica</p></div>
+                            <div class="col_10"><p class="info_content">Perchè Discord</p></div>
+                            <div class="col_10"><p class="info_content">Nitro</p></div>
+                            <div class="col_10"><p class="info_content">Sicurezza</p></div>
+                            <div class="col_10"><p class="info_content">Assistenza</p></div>
                         </div>
                     </div>
                 </div>
