--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <title>Discord</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+        integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/style.css">
 </head>
 
@@ -39,7 +42,9 @@
         <div class="jumbo">
             <div class="container jumbo_txt">
                 <h1>Il tuo posto per parlare</h1>
-                <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo si amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
+                <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o
+                    semplicemente di un piccolo gruppo si amici che vuole passare il tempo assieme, Discord rende più
+                    facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
             </div>
             <div class="container jumbo_button">
                 <button>&darr; Scarica per Mac</button>
@@ -56,19 +61,21 @@
                     </div>
                     <div class="col_3">
                         <h1>Un luogo a invito con tutto lo spazio necessario per parlare</h1>
-                        <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+                        <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o
+                            semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
                     </div>
                 </div>
             </div>
         </section>
-        
+
         <!-- colonna due -->
         <section id="grey_sec">
             <div class="container">
                 <div class="row">
                     <div class="col_3">
                         <h1>Dove trovarsi è facile</h1>
-                        <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei li e unirsi instantaneamente senza dover chiamare.</p>
+                        <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere
+                            che sei li e unirsi instantaneamente senza dover chiamare.</p>
                     </div>
                     <div class="col_9">
                         <img src="./img/item2.svg" alt="voice_chat_Discord">
@@ -86,7 +93,9 @@
                     </div>
                     <div class="col_3">
                         <h1>Da pochi a un fandom</h1>
-                        <p>Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.</p>
+                        <p>Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai
+                            membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto
+                            altro.</p>
                     </div>
                 </div>
             </div>
@@ -97,10 +106,12 @@
         <section id="keep_in_touch">
             <div class="container">
                 <h1>Tecnologia affidabile per tenersi in contatto</h1>
-                <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+                <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in
+                    video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la
+                    condivisione schermo.</p>
                 <img src="./img/item4-big.svg" alt="Discord_videocall">
-                <div class="kit_foot"> 
-                    <img src="./img/stars.svg" alt="stars">    <!-- kit => id="keep_in_touch" -->
+                <div class="kit_foot">
+                    <img src="./img/stars.svg" alt="stars"> <!-- kit => id="keep_in_touch" -->
                     <h1>Pronto a iniziare la tua avventura?</h1>
                     <button id="mac_2">&darr; Scarica per mac</button>
                 </div>
@@ -113,51 +124,105 @@
                     <div class="col_9">
                         <h2 class="info_title">Il tuo posto per parlare</h2>
                         <img class="flag" src="./img/ita.png" alt="">
-                        <span>Italiano &or;</span>
+                        <span>Italiano &#9660;</span> <br>
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                        <i class="fa-brands fa-square-facebook"></i>
+                        <i class="fa-brands fa-youtube"></i>
                     </div>
                     <div class="col_9">
                         <h4 class="info_title">Prodotto</h4>
                         <div class="row_prefooter">
-                            <div class="col_10"><p class="info_content">Scarica</p></div>
-                            <div class="col_10"><p class="info_content">Perchè Discord</p></div>
-                            <div class="col_10"><p class="info_content">Nitro</p></div>
-                            <div class="col_10"><p class="info_content">Sicurezza</p></div>
-                            <div class="col_10"><p class="info_content">Assistenza</p></div>
+                            <div class="col_10">
+                                <p class="info_content">Scarica</p>
+                            </div>
+                            <div class="col_10">
+                                <p class="info_content">Perchè Discord</p>
+                            </div>
+                            <div class="col_10">
+                                <p class="info_content">Nitro</p>
+                            </div>
+                            <div class="col_10">
+                                <p class="info_content">Sicurezza</p>
+                            </div>
+                            <div class="col_10">
+                                <p class="info_content">Assistenza</p>
+                            </div>
                         </div>
                     </div>
                     <div class="col_9">
                         <h4 class="info_title">Compagnia</h4>
                         <div class="row_prefooter">
-                            <div class="col_10"><p class="info_content">Chi siamo</p></div>
-                            <div class="col_10"><p class="info_content">Lavora con noi</p></div>
-                            <div class="col_10"><p class="info_content">Marchio</p></div>
-                            <div class="col_10"><p class="info_content">Redazione</p></div>
-                            <div class="col_10"><p class="info_content">Negozio</p></div>
+                            <div class="col_10">
+                                <p class="info_content">Chi siamo</p>
+                            </div>
+                            <div class="col_10">
+                                <p class="info_content">Lavora con noi</p>
+                            </div>
+                            <div class="col_10">
+                                <p class="info_content">Marchio</p>
+                            </div>
+                            <div class="col_10">
+                                <p class="info_content">Redazione</p>
+                            </div>
+                            <div class="col_10">
+                                <p class="info_content">Negozio</p>
+                            </div>
                         </div>
                     </div>
                     <div class="col_9">
                         <h4 class="info_title">Risorse</h4>
                         <div class="row_prefooter">
-                            <div class="col_10"><p class="info_content">Scarica</p></div>
-                            <div class="col_10"><p class="info_content">Perchè Discord</p></div>
-                            <div class="col_10"><p class="info_content">Nitro</p></div>
-                            <div class="col_10"><p class="info_content">Sicurezza</p></div>
-                            <div class="col_10"><p class="info_content">Assistenza</p></div>
-                            <div class="col_10"><p class="info_content">Scarica</p></div>
-                            <div class="col_10"><p class="info_content">Perchè Discord</p></div>
-                            <div class="col_10"><p class="info_content">Nitro</p></div>
-                            <div class="col_10"><p class="info_content">Sicurezza</p></div>
-                            <div class="col_10"><p class="info_content">Assistenza</p></div>
+                            <div class="col_10">
+                                <p class="info_content">Scarica</p>
+                            </div>
+                            <div class="col_10">
+                                <p class="info_content">Perchè Discord</p>
+                            </div>
+                            <div class="col_10">
+                                <p class="info_content">Nitro</p>
+                            </div>
+                            <div class="col_10">
+                                <p class="info_content">Sicurezza</p>
+                            </div>
+                            <div class="col_10">
+                                <p class="info_content">Assistenza</p>
+                            </div>
+                            <div class="col_10">
+                                <p class="info_content">Scarica</p>
+                            </div>
+                            <div class="col_10">
+                                <p class="info_content">Perchè Discord</p>
+                            </div>
+                            <div class="col_10">
+                                <p class="info_content">Nitro</p>
+                            </div>
+                            <div class="col_10">
+                                <p class="info_content">Sicurezza</p>
+                            </div>
+                            <div class="col_10">
+                                <p class="info_content">Assistenza</p>
+                            </div>
                         </div>
                     </div>
                     <div class="col_9">
                         <h4 class="info_title">Norme</h4>
                         <div class="row_prefooter">
-                            <div class="col_10"><p class="info_content">Scarica</p></div>
-                            <div class="col_10"><p class="info_content">Perchè Discord</p></div>
-                            <div class="col_10"><p class="info_content">Nitro</p></div>
-                            <div class="col_10"><p class="info_content">Sicurezza</p></div>
-                            <div class="col_10"><p class="info_content">Assistenza</p></div>
+                            <div class="col_10">
+                                <p class="info_content">Scarica</p>
+                            </div>
+                            <div class="col_10">
+                                <p class="info_content">Perchè Discord</p>
+                            </div>
+                            <div class="col_10">
+                                <p class="info_content">Nitro</p>
+                            </div>
+                            <div class="col_10">
+                                <p class="info_content">Sicurezza</p>
+                            </div>
+                            <div class="col_10">
+                                <p class="info_content">Assistenza</p>
+                            </div>
                         </div>
                     </div>
                 </div>
