--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                     facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
             </div>
             <div class="container jumbo_button">
-                <button>&darr; Scarica per Mac</button>
-                <button>Apri Discord nel tuo Browser</button>
+                <button id="mac_1">&darr; Scarica per Mac</button>
+                <button id="browser">Apri Discord nel tuo Browser</button>
             </div>
         </div>
 
@@ -229,11 +229,11 @@
             </div>
         </section>
     </main>
-    <footer class="black">
-        <div class="container aqua">
+    <footer>
+        <div class="container">
             <div class="row_footer">
-                <div class="col_1 logo">Logo</div>
-                <div class="col_1 bottone"><button>Bottone</button></div>
+                <div class="col_1 logo"><img src="./img/logo.svg" alt=""></div>
+                <div class="col_1"><button id="register">Registrati</button></div>
             </div>
         </div>
     </footer>
